# python-vipaccess

./: .flake8  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test_and_release.yml
tests/: test_patharg.py  test_qr.py  test_utils.py  test_vipaccess.py
vipaccess/: __main__.py  patharg.py  provision.py  qr.py
