[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-vipaccess"
version = "0.14.2"
description = "A free software implementation of Symantec's VIP Access application and protocol"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Daniel Lenski", email = "code@delbert.me"}
]
keywords = ["development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pycryptodome>=3.19",
    "oath>=1.4.2",
    "requests>=2.31",
]

[project.optional-dependencies]
qr = ["qrcode"]
"qr-pil" = ["qrcode[pil]"]

[project.scripts]
vipaccess = "vipaccess.__main__:main"

[project.urls]
homepage = "https://github.com/cnDelbert/python-vipaccess"

[tool.black]
line-length = 127
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
